<resources>
    <string name="app_name">EventRegistration_Android</string>
    <string name="action_settings">Settings</string>

    <string name="newregister_button">Register</string>
    <string name="newparticipant_hint">Who?</string>

    <string name="newparticipant_button">Add Participant</string>

    <string name="newevent_date_label">Date?</string>
    <string name="newevent_date_val">02-02-17</string>

    <string name="newevent_start_time_label">Start time?</string>
    <string name="newevent_end_time_label">End time?</string>

    <string name="participantspinner_label">Participant?</string>

    <string name="eventspinner_label">Event?</string>
    <string name="newevent_name_hint">Event name?</string>

    <string name="newevent_button">Add Event</string>
    <string name="newevent_end_time_val">10:00</string>
    <string name="newevent_start_time_val">8:00</string>


    <!-- Errors -->
    <!--<string name="default_error"></string>-->
    <!--<string name="participant_error">Error:Please choose or enter a participant</string>-->
    <!--<string name="event_name_error">Error:Please choose or enter an event</string>-->
    <!--<string name="event_date_error">Error:Please choose or enter an event date</string>-->
    <!--<string name="event_start_time_error">Error:Please choose or enter a start time</string>-->
    <!--<string name="event_end_time_error">Error:Please choose or enter an end time</string>-->
    <!--<string name="event_time_error">Error:Start Time cannot come after end time</string>-->
    <!--<string name="event_registration_error1">Error:Participant needs to be selected for registration! </string>-->
    <!--<string name="event_registration_error2">Error:Participant does not exist!</string>-->
    <!--<string name="event_registration_error3">Error:Event does not exist!</string>-->




</resources>
