<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.eventregistration_android.MainActivity"
    tools:showIn="@layout/activity_main">

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--Error Messages for Adding Participants -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/error_add_participant"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text=""
            android:textColor="#0EFFFF" />


    </LinearLayout>

        <!--Error Messages for Adding Event -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/error_add_event"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#FFFF4444"
                android:text="" />


        </LinearLayout>

        <!--Error Messages for Registering -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/error_registering"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text=""
                android:textColor="#FF99CC00" />


        </LinearLayout>





        <!-- "Event"   -->

        <!-- Participant Spinner-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/participantspinner_label"/>

            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/participantspinner"/>

        </LinearLayout>

        <!-- Event Spinner-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/eventspinner_label"/>

            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/eventspinner"/>

        </LinearLayout>

        <!--<EditText-->
            <!--android:id="@+id/newregister_name_name"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/newregister_hint" />-->

        <!--Register button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="Register"
            android:text="@string/newregister_button" />


        <!-- "Who"   -->
        <EditText
            android:id="@+id/newparticipant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newparticipant_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addParticipant"
            android:text="@string/newparticipant_button" />

        <!-- Fill in new event name   -->
        <EditText
            android:id="@+id/newevent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newevent_name_hint" />

        <!-- "Date"   -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id = "@+id/newevent_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_date_label" />

            <!-- Event value -->
            <TextView
                android:id="@+id/newevent_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="showDatePickerDialog"
                android:text="@string/newevent_date_val" />
        </LinearLayout>

        <!-- "Start Time"   -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Start time?" />


            <!-- Fix this!!!!-->
            <TextView
                android:id="@+id/newevent_start_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="showTimePickerDialog"
                android:text="@string/newevent_start_time_val" />
        </LinearLayout>

        <!-- "End Time"   -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="End Time?" />

            <TextView
                android:id="@+id/newevent_end_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="showTimePickerDialog"
                android:text="@string/newevent_end_time_val" />
        </LinearLayout>

        <!-- "Add Event Button"   -->
        <Button
            android:id="@+id/newevent_name_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addEvent"
            android:text="@string/newevent_button" />


    </LinearLayout>


</RelativeLayout>



